--- a/package.json
+++ b/package.json
@@ -1,14 +1,43 @@
 {
-	"name": "floppa.info",
-	"version": "0.1.0",
-	"description": "Floppa.info website",
-	"main": "index.html",
-	"repository": "https://github.com/itsbumble/floppa.info",
-	"license": "MIT",
-	"scripts": {
-		"sassify": "sass index.scss:index.css --no-source-map"
-	},
-	"dependencies": {
-		"sass": "^1.37.5"
-	}
+  "name": "floppa.info",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.35",
+    "@sveltejs/adapter-static": "^1.0.0-next.21",
+    "@sveltejs/kit": "next",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^3.2.1",
+    "postcss": "^8.3.11",
+    "postcss-nesting": "^9.0.0",
+    "prettier": "^2.4.1",
+    "prettier-plugin-svelte": "^2.4.0",
+    "svelte": "^3.42.6",
+    "svelte-check": "^2.2.6",
+    "svelte-preprocess": "^4.9.8",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3"
+  },
+  "type": "module",
+  "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "mdsvex": "^0.9.8",
+    "rehype-autolink-headings": "^6.1.0",
+    "rehype-slug": "^5.0.0",
+    "remark-abbr": "^1.4.1",
+    "remark-github": "^11.2.1",
+    "sass": "^1.43.4",
+    "tailwindcss": "^2.2.19"
+  }
 }
